ok enough tweaks, this is ready to blast out

--- a/pr1/itads2013-pr1-assignment.tex
+++ b/pr1/itads2013-pr1-assignment.tex
@@ -161,13 +161,14 @@ Gnuplot can be used interactively (like in exercise 7) by just giving its comman
 But it can also run in batch mode by passing the name of a plot script file on its command line.
 A gnuplot script file is just a text file with a list of gnuplot commands.
 You can download an archive with several example scripts from the course website.
-they have a ``\texttt{.plot}'' extension on the file name.
+They have a ``\texttt{.plot}'' extension on the file name.
 Notice that those examples which create a figure window must be launched with the additional option ``\texttt{-persist}'' as otherwise the figure just flashes briefly on the screen.
-Notice that there are also example plot files which save the figure in a PNG image, intended for inclusion in your report.
-Please read the gnuplot documentation~\cite{gnuplot} for more details.
+There is one example plot file which save the figure in a PNG image, intended for inclusion in your report.
+Please look at those files and read the gnuplot documentation~\cite{gnuplot} for more details.
 
-Also notice that you are free to use some other software to plot your data.
-For example, if you are familiar with Matlab, you may find that much easier to work with.
+You are free to use some other software to plot your data if you are having trouble with Gnuplot.
+For example, if you are familiar with Matlab, you may find that easier to work with.
+But you may have to change the output format of the benchmark program accordingly.
 Excel or LibreOffice Calc may be other viable options.
 Note that whichever option you choose, your report must document the plotting tool and commands such that your figures can be reproduced.
 
