--- a/pr1/itads2013-pr1-report-template.tex
+++ b/pr1/itads2013-pr1-report-template.tex
@@ -22,13 +22,18 @@
 
 
 
-The report is an essential part of the project work.
+{\itshape
+
+\vfill
+
+\textbf{The report is an essential part of the project work.
 It counts for approximately half the points.
-The structure of this template should be followed to write your report.
+The structure of this template should be followed to write your report.}
 Most aspects of the report are clearly specified in this template, others are more open-ended and you have to decide how best to structure them to illustrate what you have done and what conclusions you draw from your results.
 
-The report should start with a short summary of what you have done (which tasks and which algorithms you have chosen).
+\vfill
 
+The report should start with a short summary of what you have done (which tasks and which algorithms you have chosen).
 Then follows a section on individual algorithm benchmarks, each under its own section heading.
 It should contain at least one plot of the runtime in function of problem size.
 If you did the second mandatory task, this plot should show the minimum, average, and maximum runtimes.
@@ -38,9 +43,9 @@ The plots should be followed by a short text (or bullet list) which
 \item
   specifies references that you used;
 \item
-  explains where to find your implementation in your code (source file and function names);
+  explains where to find your implementation in your code;
 \item
-  states how to reproduce your plots (how to save the data and plot it using Gnuplot or some other tool);
+  states how to reproduce your plots;
 \item
   finishes with a more free-form text about other things you wish to point out, for example where to find test code and what you conclude from the plots.
 \end{compactitem}
@@ -48,10 +53,13 @@ The plots should be followed by a short text (or bullet list) which
 After the individual algorithms, you should write a section which compares them with each other.
 This should include some plots that clearly show how the algorithms in relation to each other, possibly using various ranges on the axes or even logarithmic scale if you think that is the most useful.
 The figures should again be followed by a short text that explains how to reproduce the plots with your program, and concludes with another open-ended free-form text.
-
 If you did the first and/or second bonus task, include them in the individual and comparison sections.
 If you did the third bonus task, choose your own reporting format such that it properly conveys your insights.
 
+\vfill
+
+\noindent
+\bfseries
 Do not forget to
 \begin{compactitem}
 \item
@@ -66,6 +74,8 @@ Do not forget to
   finish the report with a short overall conclusion.
 \end{compactitem}
 
+}
+\newpage
 
 
 \section*{Summary}
