--- a/tlas/l5-group-activities.tex
+++ b/tlas/l5-group-activities.tex
@@ -16,15 +16,70 @@
 
 
 
-\section{Recognizing Data Structures}
+\section{Detecting container types in code}
+
+In groups of two students (pairs of neighbors together), discuss and decide which type of container is implemented by \texttt{ContainerOne} and \texttt{ContainerTwo} in the provided source code.
+Also discuss and decide on answers for the two related questions:
+\begin{itemize}
+\item
+  In \texttt{ContainerOne}, what is the role of \texttt{ContainerOne.handle}, \texttt{Node.foo}, and \texttt{Node.bar}?
+  Suggest better names for these attributes.
+\item
+  In \texttt{ContainerTwo}, what is the role of \texttt{ContainerTwo.alpha}, \texttt{ContainerTwo.beta}, \texttt{Node.foo}, and \texttt{Node.bar}?
+  Again, suggest better names for these attributes.
+\end{itemize}
+
+\emph{
+  This activity is based on question 3 of the written exam from October, 2011.
+  Solutions are available on the course website.
+}
 
 
 
-\section{Detecting Data Structures in Code}
+\section{Estimating runtimes using Big-Oh}
 
-This activity is based on question 3 of the written exam from October, 2011.
-In groups of two students, discuss and decide which type of container is implemented in the two sets of structures and functions in the provided source code.
+The class is divided randomly into two groups.
+Each group selects one of them to take notes for the common parts of the activity.
+\begin{enumerate}
+\item
+  \emph{Without solving} the specific questions, each group discusses and decides which of the formulas on slide 10 of lecture 5 can be used to solve to each of the 4 questions on the provided sheet of questions.
+  Then discuss where and how to use the numeric tables at the bottom of the question sheet.
+\item
+  Each student solves the 4 questions individually, asking one of their group members for help if they get stuck.
+\item
+  Discuss in the group which part of the activity you found the most difficult, and why.
+  As a group, write down one aspect that seems the most important, then share your impressions with the entire class.
+\end{enumerate}
 
+\emph{
+  This activity is the same as exam question 4 from October, 2012.
+  Solutions are available on the course website.
+}
+
+
+
+\section{When is Big-Oh useful?}
+
+The class is again divided randomly into two groups.
+And again, each group selects one of them to take notes.
+
+Each group discusses the benefits and drawbacks of the Big-Oh approach to computational complexity.
+What does it do, what does it assume, when is this good or bad, how much can be inferred from it?
+At the end of the discussion each group decides what is for them the most important advantage, and what is the most important disadvantage.
+This consensus is written down and then shared with the entire class.
+
+\emph{
+  There is no strict right or wrong in this activity.
+  The purpose is for everyone to clarify why we learn about Big-Oh and when it can be useful in practice.
+}
+
+
+
+\section{Divide \& Conquer applied to the maximum subsequence sum problem}
+
+
+
+\section{Implement a memo infrastructure for the Fibonacci sequence}
 
 
 
