OK finished with l6 group activities, still need to do the exercises!

--- a/tlas/l6-a2-solution.tex
+++ b/tlas/l6-a2-solution.tex
@@ -2,6 +2,7 @@
 
 \usepackage[margin=3.5cm]{geometry}
 \usepackage{booktabs,amsmath,paralist}
+\usepackage[format=hang,labelfont=it]{caption}
 
 \begin{document}
 
